[project]
name = "spoon"
authors = [{ name = "Arthur Harduim", email = "harduim.arthur@gmail.com" }]
readme = "README.md"
license = { file = "LICENSE" }
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
dependencies = [
  "fastapi~=0.109",
  "redis-om~=0.2",
  "python-dotenv~=1.0",
  "uvicorn~=0.26",
  "orjson~=3.9",
]


[project.urls]
Home = "https://github.com/Harduim/expert-spoon"


[project.optional-dependencies]
dev = ["black", "isort", "pytest"]


[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[tool.black]
line-length = 100
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
